# src/main/java/io/renren/modules/act/controller/ActProductController.java
@@ -10,6 +10,7 @@ package io.renren.modules.act.controller;
 
 
 import io.renren.common.utils.R;
+import io.renren.modules.act.entity.ActProductDto;
 import io.renren.modules.generator.entity.KYwActivityProductEntity;
 import io.renren.modules.generator.entity.KYwProductActionEntity;
 import io.renren.modules.generator.entity.KYwProductCategoryEntity;
@@ -24,7 +25,10 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 /**
  * 商品分类相关
@@ -32,19 +36,44 @@ import java.util.List;
  * @author Mark sunlightcs@gmail.com
  */
 @RestController
-@RequestMapping("/act/")
+@RequestMapping("/act")
 public class ActProductController extends AbstractController {
 
     @Autowired
-    private KYwProductActionService service;
+    private KYwProductActionService actionService;
+    @Autowired
+    private KYwProductService productService;
 
 
 
     //获取所有的选品库商品活动列表
     @PostMapping("/getAreaInfo")
     public R getAreaInfo() {
-        List<KYwProductActionEntity>list = service.list();
+        List<KYwProductActionEntity>list = actionService.list();
         return R.ok().put("data", list);
+    }
+
+
+    //根据商品活动id获取活动详情，包括活动信息以及该活动包含的商品详情
+    @PostMapping("/getActProductList")
+    public R getActProductList(Integer actId,Integer page,Integer limit) {
+        //根据id获取该专区的信息
+        KYwProductActionEntity entity = actionService.getById(actId);
+        //根据专区去连表获取商品信息
+
+        Map<String,Object> map = new HashMap<String,Object>();
+        map.put("actId",actId);
+        Integer startLimit = (page-1)*limit;
+        map.put("page",page);
+        map.put("startLimit",startLimit);
+        map.put("limit",limit);
+        List<KYwProductEntity> list = productService.findProByActId(map);
+
+        ActProductDto dto = new ActProductDto();
+        dto.setProductEntityList(list);
+        dto.setProductActionEntity(entity);
+
+        return R.ok().put("data", dto);
     }
 
 	
